[gd_scene load_steps=6 format=3 uid="uid://yu1c8v3qgvuj"]

[ext_resource type="Script" uid="uid://bxivrbj6tcc6f" path="res://units/mage_unit.gd" id="1_m20bd"]
[ext_resource type="PackedScene" path="res://components/unit_statistics.tscn" id="2_2alnx"]
[ext_resource type="PackedScene" uid="uid://cafjk8s7jphbo" path="res://components/animation_component.tscn" id="3_i0d24"]
[ext_resource type="SpriteFrames" uid="uid://bml0olv6gk0f2" path="res://textures/wizard.tres" id="4_hnsjg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n1g63"]
radius = 14.035668

[node name="MageUnit" type="Area2D" node_paths=PackedStringArray("animation_component", "statistics")]
collision_layer = 2
collision_mask = 56
script = ExtResource("1_m20bd")
animation_component = NodePath("AnimationComponent")
statistics = NodePath("UnitStatistics")

[node name="UnitStatistics" parent="." instance=ExtResource("2_2alnx")]

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("3_i0d24")]
sprite = NodePath("../Sprite")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(7, -6)
sprite_frames = ExtResource("4_hnsjg")
animation = &"run"
frame_progress = 0.30322576

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_n1g63")
